fix alignment of table

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,23 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
-html{
+html {
     font-size: 62.5%;
 }
 
-.nav-container{
+.nav-container {
     background-color: rgb(245, 246, 247);
     text-align: center;
     padding: 1rem 0;
 }
 
-.sub-container table{
+.table {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    width: 100%;
     position: absolute;
     font-size: 1.6rem;
 }
+
+
+
